# serde_flat_regex

./: Cargo.toml  README.md
.github/workflows/: build.yml  rust.yml
src/: lib.rs
tests/: macro_test.rs
tests/fail/: key_access_fail.rs  key_access_fail.stderr  regex_fail.rs  regex_fail.stderr
