[package]
name = "serde_flat_regex"
version = "0.1.0"
edition = "2021"
readme = "README.md"
keywords = ["serde", "regex", "flattening","map","deserialize"]
license = "MIT"
repository = "https://github.com/sharkspear94/serde_flat_regex"
categories = ["encoding", "development-tools::cargo-plugins"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
darling = "0.14.1"
proc-macro-error = "1.0.4"
proc-macro2 = "1.0.43"
quote = "1.0.21"
syn = { version = "1.0.99", features = ["full"] }


[dev-dependencies]
serde = { version = "1.0.143", features = ["derive"] }
serde_json = "1.0.83"
bson = "2.4.0"
regex = "1.6.0"